# WebOfShadowsTools

./: .gitignore  README.md
imhex/: APKF.hexpat  PcPackFileTypes.hexpat  PcPackSimple.hexpat  mesh.hexpat  skel.hexpat  toc.hexpat
notes/: Repacking.md  WoSExeInfo.txt  WoSFileStatistics.txt  game_shared.ini  ghidra_slf.txt  validDevOptions.ini
python/: README.md  _utils.py  pcapk.py  pcpack.py  pyproject.toml  repack-wos.py  unpack-wos.py
python/resource/: filename_hashes.json
python/wos/: _resource_info.py  _utils.py  apk.py  cli.py  pack.py  pcpack.py  repack.py
python/wos/resource/: filename_hashes.json
python/wos/utils/: __init__.py  bindecl.py  log.py
resource/: filename_hashes.json
